src/main/java/com/example/stream/spring/courses/reactive/example/model/error/CourseNotFound.java
package com.example.stream.spring.courses.reactive.example.model.error;

public record CourseNotFound() implements CourseError {
}
